tests/checker/good/lib/TestLibNS2.scillib
scilla_version 0

library TestLibNS2

let foo = Uint32 57
