tests/checker/bad/lib/TestLibNS1.scillib
library TestLibNS1

let foo = Uint32 57
